@@ -11,6 +11,8 @@ xymon (4.3.25) stable; urgency=high
    * Fix missing network interface graph data on FreeBSD (Niko <nicolas@lienard.name>)
    * In xymonnet, a rare SSL error state that could occur after a 
      connection is opened will now be considered "service down"        
+   * Fix a crash in xymonnet when handling certain malformed SSL certificates
+     (Reported by Thomas Leavitt, originally via Jeremy Laidman)
 
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Mon, XX Dec 2015 17:40:00 -0800
