@@ -9,6 +9,8 @@ Changes from 4.3.24 -> 4.3.25 (unreleased)
 * Fix missing network interface graph data on FreeBSD (Niko <nicolas@lienard.name>)
 * In xymonnet, a rare SSL error state that could occur after a 
   connection is opened will now be considered "service down"
+* Fix a crash in xymonnet when handling certain malformed SSL certificates
+  (Reported by Thomas Leavitt, originally via Jeremy Laidman)
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
